--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -7,6 +7,7 @@ $primary-color: #000000;
 $dark-color: #403F40;
 $white-color: #E5E5E5;
 $light-color: #ECEBEC;
+$grey-color: #D5D4D5;
 $yellow-color: #FFD600;
 
 // COMMON DOCUMENT STYLES
@@ -16,15 +17,6 @@ body {
     font-family: $hauora;
     font-size: $primary-font-size;
     line-height: $primary-line-height;
-    color: $light-color;
-    background-color: $primary-color;
-    
-    @media screen and (min-width: 768px) {
-        background-image: url(../img/dist/background-body.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: top center;
-    }
 }
 
 ul,
@@ -40,18 +32,6 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 }
 
-h1 {
-    font-size: 80px;
-    font-weight: normal;
-
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
-        font-size: 50px;
-    }
-    @media screen and (max-width: 767px) {
-        font-size: 30px;
-    }
-}
-
 p {
     margin: 0;
 }
@@ -61,8 +41,11 @@ a {
     color: $light-color;
     transition: all 0.4s;
     &:hover {
-        color: $light-color;
+        color: $yellow-color;
         text-decoration: none;
+    }
+    &:active {
+        color: $yellow-color;
     }
 }
 
@@ -87,6 +70,68 @@ svg line {
     width: 100%;
 }
 
+.section {
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: top center;
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        z-index: 1;
+        display: block;
+        width: 1px;
+        height: 100%;
+    }
+    &--black {
+        color: $light-color;
+        background: $primary-color;
+        &::before {
+            background: $dark-color;
+        }
+    }
+    &--white {
+        color: $primary-color;
+        background-color: $light-color;
+        &::before {
+            background: $grey-color;
+        }
+    }
+
+    @media screen and (min-width: 1024px) {
+        padding-left: 200px;
+        &::before {
+            left: 200px;
+        }
+    }
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+        padding-left: 130px;
+        &::before {
+            left: 130px;
+        }
+    }
+    @media screen and (max-width: 767px) {
+        padding-left: 15px;
+        background-image: none!important;
+        &::before {
+            left: 15px;
+        }
+    }
+}
+
+.section-padding {
+    @media screen and (min-width: 1024px) {
+        padding-top: 300px;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+        padding-top: 200px;
+    }
+    @media screen and (max-width: 767px) {
+        padding-top: 150px;
+    }
+}
+
 .section-heading {
     padding: 27px 0;
     font-size: 18px;
@@ -101,5 +146,31 @@ svg line {
     @media screen and (max-width: 1023px) {
         padding: 17px 0;
         font-size: 12px;
+    }
+}
+
+.wheel-btn {
+    position: relative;
+    display: inline-block;
+    min-width: 200px;
+    min-height: 200px;
+    max-width: 200px;
+    max-height: 200px;
+    svg {
+        width: 100%;
+        height: 100%;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+        min-width: 120px;
+        min-height: 120px;
+        max-width: 120px;
+        max-height: 120px;
+    }
+    @media screen and (max-width: 767px) {
+        min-width: 130px;
+        min-height: 130px;
+        max-width: 130px;
+        max-height: 130px;
     }
 }
