--- a/src/sass/_panel.scss
+++ b/src/sass/_panel.scss
@@ -9,7 +9,6 @@
     flex-direction: column;
     padding: 44px 0;
     width: 100%;
-    border-right: 1px solid $dark-color;
 
     @media screen and (min-width: 1024px) {
         max-width: 200px;
@@ -23,7 +22,6 @@
         justify-content: space-between;
         padding: 16px 15px;
         background: $primary-color;
-        border-right: none;
         border-bottom: 1px solid $dark-color;
     }
 
@@ -63,9 +61,14 @@
     background: none;
     border: none;
     cursor: pointer;
-    transition: all 0.4s ease-in-out;
+    transition: transform 0.4s ease-in-out;
     &:focus {
         outline: none;
+    }
+    &--black {
+        .hamburger__inner {
+            background: $primary-color;
+        }
     }
 
     @media screen and (hover: hover) {
@@ -87,23 +90,23 @@
 
     &--active {
         .hamburger__inner {
-            background: $yellow-color;
-            
             @media screen and (min-width: 768px) {
+                top: 10px;
+                height: 45px;
                 &:first-child {
-                    transform: rotate(-45deg) translateX(5px);
+                    left: 25px;
+                    transform: rotate(-45deg);
                 }
                 &:last-child {
-                    transform: rotate(45deg) translateX(-5px);
+                    left: 25px;
+                    transform: rotate(45deg);
                 }
             }
             @media screen and (max-width: 767px) {
                 &:first-child {
-                    //top: 0;
                     transform: rotate(45deg) translateY(3.5px);
                 }
                 &:last-child {
-                    //top: 0;
                     transform: rotate(-45deg) translateY(-3.5px);
                 }
             }
